--- a/web-demo/src/main/AndroidManifest.xml
+++ b/web-demo/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
     <application
         android:allowBackup="false"
         android:label="@string/app_name"
-        android:supportsRtl="true" >
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.Light"
+        >
         <activity
             android:name=".WebDemoActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
