--- a/web-demo/build.gradle
+++ b/web-demo/build.gradle
@@ -47,6 +47,8 @@ apply plugin: 'com.uis.methodtimer'
 methodTimer{
     exclude 'interprocess.uis.com.web_demo.vassonic,interprocess.uis.com.web_demo.PermissionProxy'
     isMain false
-    timeout 0
+    timeout 5
 }
+
+//apply plugin: 'com.uis.methodinject'
 
