--- a/method_timer/build.gradle
+++ b/method_timer/build.gradle
@@ -29,7 +29,7 @@ uploadArchives {
 Properties propLocal = new Properties()
 propLocal.load(project.rootProject.file('local.properties').newDataInputStream())
 
-version="0.0.1-alpha3"
+version="0.0.1"
 group=propLocal.getProperty("bintray.group")
 
 install {
