--- a/method_inject/build.gradle
+++ b/method_inject/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'com.jfrog.bintray'
 dependencies {
     compile gradleApi()
     compile localGroovy()
+    compile 'com.android.tools.build:gradle:3.0.0'
     compile 'org.javassist:javassist:3.22.0-GA'
     compile 'com.android.tools.build:transform-api:1.5.0'
 }
@@ -28,20 +29,17 @@ uploadArchives {
 Properties propLocal = new Properties()
 propLocal.load(project.rootProject.file('local.properties').newDataInputStream())
 
-version="0.0.1-alpha"
+version="0.0.1alpha"
 group=propLocal.getProperty("bintray.group")
 
 install {
     repositories.mavenInstaller {
-        // This generates POM.xml with proper parameters
         pom {
             project {
                 packaging 'jar'
                 name propLocal.getProperty("bintray.method_inject")
                 description propLocal.getProperty("bintray.method_inject")
-                // #CONFIG# // project title
                 url propLocal.getProperty('bintray.mehtod_timer.url')
-                // Set your license
                 licenses {
                     license {
                         name 'The Apache Software License, Version 2.0'
@@ -50,12 +48,9 @@ install {
                 }
                 developers {
                     developer {
-                        id  propLocal.getProperty('bintray.id')//org unique id
-                        // #CONFIG# // your user id (you can write your nickname)
-                        name propLocal.getProperty('bintray.name')//current user id
-                        // #CONFIG# // your user name
+                        id  propLocal.getProperty('bintray.id')
+                        name propLocal.getProperty('bintray.name')
                         email ""
-                        // #CONFIG# // your email
                     }
                 }
                 scm {
