--- a/web-demo/build.gradle
+++ b/web-demo/build.gradle
@@ -8,11 +8,7 @@ android {
         targetSdkVersion targetVer
         versionCode 1
         versionName "1.0"
-        /*manifestPlaceholders = [
-                applicationId:"interprocess.uis.com.web_demo"
-        ]*/
     }
-
     dataBinding{
         enabled = false
     }
@@ -22,9 +18,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-    dexOptions {
-        javaMaxHeapSize "4g"
     }
 }
 
@@ -40,8 +33,8 @@ repositories {
     }
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:'+supportVer
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:' + supportVer
     compile 'com.tencent.sonic:sdk:3.0.0'
     compile(name: 'WebLib-1.1.3', ext: 'aar')
 }
@@ -59,13 +52,12 @@ methodTimer{
 apply plugin: 'com.jakewharton.butterknife'
 
 task("regTask").doLast {
-    def patten = "android.support.compat.R\$attr.class"
-    def reg = ".*\\.[A-Z]{0,1}R.{0,1}|.*\\.R.{0,1}\\\$.*|.*\\.BuildConfig\"".toString()
-    println(patten.matches(reg))
-    reg = "\\.class"
-    def reg1 = "\\\\"
-    println("result="+patten.replaceAll(reg,"").replaceAll(reg1,"."))
+    def patten = new File("./").absolutePath
 
+    def reg = File.separator
+    println(patten)
+    println(reg)
+    println("result="+patten.replace(reg,"."))
 }
 
 class TimingsListener implements TaskExecutionListener, BuildListener {
