--- a/web-demo/build.gradle
+++ b/web-demo/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:' + supportVer
     compile 'com.tencent.sonic:sdk:3.0.0'
     compile(name: 'WebLib-1.1.3', ext: 'aar')
+    compile project(':lib-demo')
 }
 
 apply plugin: 'com.uis.methodtimer'
